# py-mcp

./: CMakeLists.txt  README.md  bindings.cpp  mcp_server.py  setup.py  test.py
